--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -1,40 +1,78 @@
-YOUR NAME Lab 2: Intro to HTML
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Document</title>
+</head>
+<body>
+    <div class="wrapper">
+        <h1 class="title">Chi-Hao Sheng Lab 2: Intro to HTML</h1>
+        <nav>
+            <a href="selectors.html">Selectors</a>
+            <a href="index.html">Main Page</a>
+        </nav>
+        <h2 class="subtitle">First, the basics.</h2>
+        <p>You need the following to build your website.</p>
+        <div class="default"></div>
 
-Selectors
-Main Page
+        <div class="section_1">
+            <div>
+                <ul>
+                    <li>HTML and CSS</li>
+                    <li>Javascript</li>
+                    <li>Node.js</li>
+                    <li>
+                        And other web development frameworks</li>
+                </ul>
+            </div>
+            <div>
+                <p>You should list your top 3 goals for the class below.</p>
+                <ol>
+                    <li>Learn front-end web design</li>
+                    <li>Learn new programming languages</li>
+                    <li>Learn how to work with others in a technical space</li>
+                    <li>Learn popular web dev frameworks</li>
+                </ol>
+            </div>
+        </div>
 
-First, the basics.
+        <div class="section_2">
+            <h2 class="subtitle">Let's Try Some Inline Elements</h2>
+            <p class="default">Sometimes you want to <em>draw attention</em> to something in a line of text.</p>
+            <p class="default">Sometimes you want to <strong>strongly emphasize something</strong> in the text.</p>
+            <p class="default">Sometimes you want to  <em><strong>do both</strong></em>.</p>
+        </div>
 
-You need the following to build your website.
+        <h3 class="default">Empty Elements</h3>
+        <p>
+            Soft line breaks can't wrap anything.</br> Neither can image tags, or hard lines.</br>
+            Add a hard line under here, and make sure you've used some soft line breaks.
+        </p>
+    </div>
+    <hr>
+    <div class="wrapper">
+        <div class="section_4">
+            <div class="text">
+                <h2>Image</h2>
+                <p>Include the four images in the /images folder below</p>
+                <p>Don't forget to use alt text on your images. It's important for accessibility.</p>
+            </div>
 
-HTML and CSS
-Javascript
-Node.js
-And other web development frameworks
-
-You should list your top 3 goals for the class below.
-
-Learn front-end web design
-Learn new programming languages
-Learn how to work with others in a technical space
-Learn popular web dev frameworks
-
-Let's Try Some Inline Elements
-
-Sometimes you want to draw attention to something in a line of text.
-
-Sometimes you want to strongly emphasize something in the text.
-
-Sometimes you want to do both.
-
-Empty Elements
-
-Soft line breaks can't wrap anything. Neither can image tags, or hard lines.
-Add a hard line under here, and make sure you've used some soft line breaks to match your page to the sample.
-
-Images 
-
-Don't forget to use alt text on your images. It's important for accessibility.
-
-Include a hyperlink here to your github repository for class.
-If you want your repo to be private, be sure to invite Prof A as a "collaborator."
+            <div class="carousel">
+                <div class="slides">
+                    <img src="images/onigiri_1.png" alt="an onigiri">
+                    <img src="images/onigiri_2.png" alt="an onigiri">
+                    <img src="images/onigiri_3.png" alt="an onigiri">
+                    <img src="images/onigiri_4.png" alt="an onigiri">
+                </div>
+            </div>
+        </div>
+        <br><br>
+        <p><a href='https://github.com/chihaos1/INST377-Lab-Work'>My github repository can be found here.</a></p>
+        <p>If you want your repo to be private, be sure to invite Prof A as a "collaborator."</p>
+    </div>
+</body>
+</html>
