--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Lab 2 Chi-Hao Sheng</title>
 </head>
 <body>
     <div class="wrapper">
-        <h1 class="title">Chi-Hao Sheng Lab 2: Intro to HTML</h1>
+        <h1 class="title">Chi-Hao Sheng Lab 2: CSS Selectors</h1>
         <nav>
             <a href="selectors.html">Selectors</a>
             <a href="index.html">Main Page</a>
