--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -24,8 +24,7 @@
                     <li>HTML and CSS</li>
                     <li>Javascript</li>
                     <li>Node.js</li>
-                    <li>
-                        And other web development frameworks</li>
+                    <li>And other web development frameworks</li>
                 </ul>
             </div>
             <div>
