--- a/client/lab_3/index.html
+++ b/client/lab_3/index.html
@@ -1,40 +1,55 @@
-YOUR NAME Lab 3: Flexbox Demo
-
-Selectors
-Main Page
-
-First, the basics.
-
-You need the following to build your website.
-
-HTML and CSS
-Javascript
-Node.js
-And other web development frameworks
-
-You should list your top 3 goals for the class below.
-
-Learn front-end web design
-Learn new programming languages
-Learn how to work with others in a technical space
-Learn popular web dev frameworks
-
-Let's Try Some Inline Elements
-
-Sometimes you want to draw attention to something in a line of text.
-
-Sometimes you want to strongly emphasize something in the text.
-
-Sometimes you want to do both.
-
-Empty Elements
-
-Soft line breaks can't wrap anything. Neither can image tags, or hard lines.
-Add a hard line under here, and make sure you've used some soft line breaks to match your page to the sample.
-
-Images 
-
-Don't forget to use alt text on your images. It's important for accessibility.
-
-Include a hyperlink here to your github repository for class.
-If you want your repo to be private, be sure to invite Prof A as a "collaborator."
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Lab 3 Chi-Hao Sheng</title>
+</head>
+<body>
+    <div class="top-bar">
+        Chi-Hao Sheng Lab 3: Flexbox Demo
+    </div>
+    <div class="menu-container">
+        <div class="menu">
+            <div class="date">Sept. 15, 2021</div>
+            <div class="links">
+                <div class="demo"><a href="data.html">Database Demo</a></div>
+                <div class="main-page"><a href="index.html">Main Page</a></div>
+            </div>
+        </div>
+    </div>
+    <div class="header-container">
+        <div class="header">
+            <div class="project-link"><a>Group Project Link (no site yet)</a></div>
+            <div class="logo"><img src="image/awesome-logo.svg"/></div>
+            <div class="github"><a href="https://github.com/chihaos1/INST377-Lab-Work">My GitHub</a></div>
+        </div>
+    </div>
+    <div class='photo-grid-container'>
+        <div class='photo-grid'>
+          <div class='photo-grid-item first-item'>
+            <img src='image/one.svg'/>
+          </div>
+          <div class='photo-grid-item'>
+            <img src='image/two.svg'/>
+          </div>
+          <div class='photo-grid-item'>
+            <img src='image/three.svg'/>
+          </div>
+          <div class='photo-grid-item'>
+            <img src='image/four.svg'/>
+          </div>
+          <div class='photo-grid-item last-item'>
+            <img src='image/five.svg'/>
+          </div>
+        </div>
+    </div>
+    <div class='footer'>
+        <div class='footer-item footer-one'>Footer Item 1</div>
+        <div class='footer-item footer-two'>Footer Item 2</div>
+        <div class='footer-item footer-three'>Footer Item 3</div>
+    </div>
+</body>
+</html>
