--- a/client/lab_5/index.html
+++ b/client/lab_5/index.html
@@ -17,7 +17,7 @@
                 </div>
             </div>
         </div>
-        <div class="columns is-mobile is-multiline is-centered is-vcentered">
+        <div class="columns is-mobile is-centered is-vcentered">
             <div class="column is-narrow">
                 <form action="/api" class="box">
                     <div class="field">
